{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 24,
  "lineage": "571a89c1-4173-de19-3575-e2198705a71d",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aa133bc0053e20c",
            "arn": "arn:aws:ec2:eu-north-1:631806843945:elastic-ip/eipalloc-08aa133bc0053e20c",
            "association_id": "eipassoc-01f932bcf17e6baa6",
            "domain": "vpc",
            "id": "eipalloc-08aa133bc0053e20c",
            "instance": "i-097677f5e786d59ab",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0c708d91d1efbb104",
            "private_dns": "ip-10-0-2-75.eu-north-1.compute.internal",
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-13-61-113-45.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.113.45",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_iam_instance_profile.ec2_profile",
            "module.compute.aws_iam_role.ec2_role",
            "module.compute.aws_instance.web",
            "module.compute.aws_security_group.ec2_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0da6daf1cd16df4e7",
            "arn": "arn:aws:ec2:eu-north-1:631806843945:instance/i-097677f5e786d59ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-project-instance-profile",
            "id": "i-097677f5e786d59ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c708d91d1efbb104"
              }
            ],
            "primary_network_interface_id": "eni-0c708d91d1efbb104",
            "private_dns": "ip-10-0-2-75.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.75",
            "public_ip": "13.61.113.45",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d7d034e33c8f61a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f15fde8e02851ab3",
            "tags": {
              "Name": "terraform-project-ec2"
            },
            "tags_all": {
              "Name": "terraform-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6aca9840f2b1009"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "i-097677f5e786d59ab",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.compute.aws_iam_instance_profile.ec2_profile",
            "module.compute.aws_iam_role.ec2_role",
            "module.compute.aws_security_group.ec2_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:security-group/sg-0a6aca9840f2b1009",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6aca9840f2b1009",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "631806843945",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "sg-0a6aca9840f2b1009",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d597906993c140e6",
            "arn": "arn:aws:ec2:eu-north-1:631806843945:elastic-ip/eipalloc-0d597906993c140e6",
            "association_id": "eipassoc-092320574ca9e5086",
            "domain": "vpc",
            "id": "eipalloc-0d597906993c140e6",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-082515b921c984a41",
            "private_dns": "ip-10-0-1-10.eu-north-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-13-62-64-214.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.64.214",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:internet-gateway/igw-0a6089a625c4a8f5f",
            "id": "igw-0a6089a625c4a8f5f",
            "owner_id": "631806843945",
            "region": "eu-north-1",
            "tags": {
              "Name": "terraform-project-igw"
            },
            "tags_all": {
              "Name": "terraform-project-igw"
            },
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d597906993c140e6",
            "association_id": "eipassoc-092320574ca9e5086",
            "connectivity_type": "public",
            "id": "nat-0d9d2852d040e29bd",
            "network_interface_id": "eni-082515b921c984a41",
            "private_ip": "10.0.1.10",
            "public_ip": "13.62.64.214",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0af508c17f585a2",
            "tags": {
              "Name": "terraform-project-nat"
            },
            "tags_all": {
              "Name": "terraform-project-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:route-table/rtb-0529eede14ca59a09",
            "id": "rtb-0529eede14ca59a09",
            "owner_id": "631806843945",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9d2852d040e29bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-private-rt"
            },
            "tags_all": {
              "Name": "terraform-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "rtb-0529eede14ca59a09",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:route-table/rtb-076ba5db97941b296",
            "id": "rtb-076ba5db97941b296",
            "owner_id": "631806843945",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6089a625c4a8f5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-public-rt"
            },
            "tags_all": {
              "Name": "terraform-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "rtb-076ba5db97941b296",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017940dd923726b2d",
            "region": "eu-north-1",
            "route_table_id": "rtb-0529eede14ca59a09",
            "subnet_id": "subnet-0f15fde8e02851ab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062b0071e7f806763",
            "region": "eu-north-1",
            "route_table_id": "rtb-076ba5db97941b296",
            "subnet_id": "subnet-0c0af508c17f585a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:subnet/subnet-0f15fde8e02851ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f15fde8e02851ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631806843945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "terraform-project-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-project-private-subnet"
            },
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "subnet-0f15fde8e02851ab3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:subnet/subnet-0c0af508c17f585a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0af508c17f585a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631806843945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "terraform-project-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-project-public-subnet"
            },
            "vpc_id": "vpc-066f281cc765fc2f3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "631806843945",
            "id": "subnet-0c0af508c17f585a2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:631806843945:vpc/vpc-066f281cc765fc2f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f0eaeee3dcde219",
            "default_route_table_id": "rtb-03b5cb8dd6151471a",
            "default_security_group_id": "sg-0cb6129db5b4277b4",
            "dhcp_options_id": "dopt-08fe18c3b0a750c87",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066f281cc765fc2f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b5cb8dd6151471a",
            "owner_id": "631806843945",
            "region": "eu-north-1",
            "tags": {
              "Name": "terraform-project-vpc"
            },
            "tags_all": {
              "Name": "terraform-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}